fixed content spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -215,6 +215,7 @@ h1.entry-title{
 .hentry footer { }
 
 article.hentry{
+  padding-bottom: 20px;
   border-bottom: 1px solid #473924;
 }
 
